--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="968zl2K0ftPwRTisRlRkBt1XymJz12Z43km2WjxzR9g" />
     <meta
       name="description"
       content="Web site created using create-react-app"
